Archive2/9f/64aa033e88c370/output
main.cpp: In lambda function:
main.cpp:7:25: error: expected ';' before '}' token
 auto p1 = []() { [](){} };
                         ^
