Archive2/9f/64aa033e88c370/main.cpp
#include <iostream>
#include <string>


int main()
{
auto p1 = []() { [](){} };

p1();

}
